--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "upload",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.0",
+    "mongoose": "^6.9.2",
+    "morgan": "^1.10.0",
+    "sharp": "^0.31.3",
+    "shortid": "^2.2.16"
+  }
 }
