--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -12,5 +14,9 @@
     "morgan": "^1.10.0",
     "sharp": "^0.31.3",
     "shortid": "^2.2.16"
+  },
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon app",
+    "start": "cross-env NODE_ENV=production node app"
   }
 }
